Fri Jun 06 11:17:39 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/dblib/bcp.c:
	* src/dblib/dblib.c src/odbc/odbc.c src/pool/member.c:
	* src/tds/login.c src/tds/token.c src/tds/unittests/t0003.c:
	- change tds_process_simple_query prototype (simpler)
	- cleanup

Thu Jun  5 13:08:38 EDT 2003	JK Lowden <jklowden@schemamania.org>	
	* src/dblib/dblib.c src/tds/iconv.c
	- dbconvert: allow zero srclen for non-null datatypes
	- tds_fread_iconv: reduce outbytesleft if iconv not called.

Wed Jun 04 23:40:50 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in src/apps/tsql.c:
	- remove some updated configure stuff

Wed Jun  4 12:36:30 EDT 2003	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/ct.c:
	- constify action_string.

Tue Jun 03 17:34:32 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c src/tds/write.c:
	- small optimization

Tue Jun 03 11:47:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/t0003.c: test prepared too

Tue Jun 03 08:27:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/putdata.c src/odbc/unittests/t0004.c:
	* src/odbc/unittests/tables.c src/tds/unittests/t0003.c:
	- remove some warnings

Mon Jun 02 13:33:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
	- update list of odbc implemented functions

Sat May 31 21:23:43 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt src/odbc/odbc.c:
	- implement SQLBindParam

Sat May 31 21:01:13 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt src/odbc/odbc.c:
	* src/odbc/unittests/putdata.c:
	- implement SQLSetParam and SQLSpecialColumns

Sat May 31 18:12:42 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/convert_sql2string.h:
	* src/odbc/prepare_query.c src/odbc/unittests/putdata.c(added):
	* src/odbc/unittests/Makefile.am: