@@ -1,3 +1,7 @@
+Fri Jun  6 15:10:58 EDT 2003	JK Lowden <jklowden@schemamania.org>
+	* src/dblib/bcp.c src/tds/token.c
+	- introduce tds_do_until_done() for bcp as workaround. 
+
 Fri Jun 06 11:17:39 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* include/tds.h src/ctlib/ct.c src/dblib/bcp.c:
 	* src/dblib/dblib.c src/odbc/odbc.c src/pool/member.c:
